fixed menu jump on smaller than 420 resoulution. removed border on anchor tags

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@ header{
   margin:10px;
 }
 
+a {
+   outline: 0;
+}
+
 header div{
   float:left;
   padding-top: 50px;
@@ -125,47 +129,47 @@ section div {
 }
 
 @media screen and (max-width: 980px) {
-    header.indexHeader{
-      height:100px;
-    }
+  header.indexHeader{
+    height:100px;
+  }
 
-    body {
-      width:98%;
-    }
+  body {
+    width:98%;
+  }
 
-    .standardLayout section{
-      text-align: center;
-    }
-    .standardLayout div{
-      margin-left: auto;
-      margin-right: auto;
-      width:80%;
-    }
+  .standardLayout section{
+    text-align: center;
+  }
+  .standardLayout div{
+    margin-left: auto;
+    margin-right: auto;
+    width:80%;
+  }
 
 
-    section div{
-      width:31.333333%;
-      height:auto;
-      margin:1%;
-    }
-    .personalProject img{
-      width:100%;
-      height:100%;
-      display: block;
-      -webkit-transition: none;
-    	transition: none;
-    }
-    .personalProject:hover img{
-      opacity: .7;
-    }
-    .personalProject h3{
-      padding-left: 2px;
-      position: relative;
-      display: block;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+  section div{
+    width:31.333333%;
+    height:auto;
+    margin:1%;
+  }
+  .personalProject img{
+    width:100%;
+    height:100%;
+    display: block;
+    -webkit-transition: none;
+  	transition: none;
+  }
+  .personalProject:hover img{
+    opacity: .7;
+  }
+  .personalProject h3{
+    padding-left: 2px;
+    position: relative;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 @media screen and (max-width: 780px){
@@ -185,23 +189,31 @@ section div {
 }
 
 @media screen and (max-width: 520px) {
-    body {
-      width:100%;
-    }
-    section div{
-      width:96%;
-      height:auto;
-      margin:2%;
+  body {
+    width:100%;
+  }
+  section div{
+    width:96%;
+    height:auto;
+    margin:2%;
+  }
+  .personalProject img{
+    width:100%;
+    height:100%;
+    display: block;
+    -webkit-transition: none;
+  	transition: none;
+  }
+  .personalProject:hover img{
+    opacity: .7;
+  }
+}
 
-    }
-    .personalProject img{
-      width:100%;
-      height:100%;
-      display: block;
-      -webkit-transition: none;
-    	transition: none;
-    }
-    .personalProject:hover img{
-      opacity: .7;
-    }
+@media screen and (max-width: 420px) {
+  header div{
+    width:100%;
+  }
+  header nav{
+    padding-top: 20px;
+  }
 }
